ii/local-cluster/cool-files.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cool-files-are-here-ii-nz
