ii/local-cluster/wireguard.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wireguard
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: wireguard
  namespace: wireguard
  labels:
    app: wireguard
spec:
  serviceName: "wireguard"
  replicas: 1
  selector:
    matchLabels:
      app: wireguard
  template:
    metadata:
      labels:
        app: wireguard
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - ii-thinkpad-p70
      containers:
      - name: wireguard
        image: docker.io/linuxserver/wireguard:v1.0.20210424-ls36
        securityContext:
          capabilities:
            add:
              - NET_ADMIN
              - SYS_MODULE
          privileged: true
        volumeMounts:
          - name: wg-config
            mountPath: /config
          - name: host-volumes
            mountPath: /lib/modules
        ports:
        - containerPort: 51820
          protocol: UDP
        resources:
          requests:
            memory: "64Mi"
            cpu: "10m"
          limits:
            memory: "128Mi"
            cpu: "100m"
      volumes:
        - name: wg-config
          persistentVolumeClaim:
            claimName: wireguard-pvc
        - name: host-volumes
          hostPath:
            path: /lib/modules
            type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: wireguard
  namespace: wireguard
spec:
  selector:
    app: wireguard
  ports:
    - name: wireguard
      port: 51820
      targetPort: 51820
      protocol: UDP
  externalTrafficPolicy: Local
  type: LoadBalancer
